--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@apidae-systems/source",
+  "type": "module",
   "version": "1.0.0",
-  "packageManager": "pnpm@10.17.0",
+  "packageManager": "pnpm@10.17.1",
+  "engines": {
+    "node": "24.8.0"
+  },
   "license": "GPL-3.0-only",
   "homepage": "https://github.com/apidae-systems/platform",
   "bugs": {
@@ -12,32 +16,91 @@
     "type": "git",
     "url": "git+https://github.com/apidae-systems/platform.git"
   },
-  "type": "module",
+  "author": "Mumtahin Farabi <mfarabi619@gmail.com> (https://github.com/MFarabi619)",
+  "dependencies": {
+    "@apollo/server": "catalog:",
+    "@biomejs/biome": "catalog:",
+    "@compodoc/compodoc": "catalog:",
+    "@mkvlrn/result": "catalog:",
+    "@nestjs/apollo": "catalog:",
+    "@nestjs/cli": "catalog:",
+    "@nestjs/common": "catalog:",
+    "@nestjs/config": "catalog:",
+    "@nestjs/core": "catalog:",
+    "@nestjs/graphql": "catalog:",
+    "@nestjs/platform-express": "catalog:",
+    "@nestjs/platform-socket.io": "catalog:",
+    "@nestjs/swagger": "catalog:",
+    "@nestjs/websockets": "catalog:",
+    "@scalar/nestjs-api-reference": "catalog:",
+    "class-transformer": "catalog:",
+    "class-validator": "catalog:",
+    "graphql": "catalog:",
+    "graphql-request": "catalog:",
+    "gray-matter": "catalog:",
+    "pino-pretty": "catalog:",
+    "reflect-metadata": "catalog:",
+    "rxjs": "catalog:",
+    "superjson": "catalog:",
+    "xstate": "catalog:",
+    "zod": "catalog:"
+  },
+  "devDependencies": {
+    "@mkvlrn/config": "catalog:",
+    "@nestjs/schematics": "catalog:",
+    "@nestjs/serve-static": "catalog:",
+    "@nestjs/testing": "catalog:",
+    "@nx/js": "catalog:",
+    "@nx/nest": "catalog:",
+    "@nx/node": "catalog:",
+    "@nx/vite": "catalog:",
+    "@nx/web": "catalog:",
+    "@nx/workspace": "catalog:",
+    "@statelyai/inspect": "catalog:",
+    "@swc-node/register": "catalog:",
+    "@swc/cli": "catalog:",
+    "@swc/core": "catalog:",
+    "@swc/helpers": "catalog:",
+    "@types/express": "catalog:",
+    "@types/node": "catalog:",
+    "@types/supertest": "catalog:",
+    "@vitest/coverage-v8": "catalog:",
+    "@vitest/ui": "catalog:",
+    "get-port": "catalog:",
+    "graphql-voyager": "catalog:",
+    "likec4": "catalog:",
+    "node-modules-inspector": "catalog:",
+    "nx": "catalog:",
+    "supertest": "catalog:",
+    "swc-loader": "catalog:",
+    "ts-loader": "catalog:",
+    "ts-node": "catalog:",
+    "tsc-alias": "catalog:",
+    "tsconfig-paths": "catalog:",
+    "tslib": "catalog:",
+    "tsup": "catalog:",
+    "tsx": "catalog:",
+    "typescript": "catalog:",
+    "vite": "catalog:",
+    "vite-node": "catalog:",
+    "vite-tsconfig-paths": "catalog:",
+    "vitest": "catalog:",
+    "vue-tsc": "catalog:"
+  },
   "keywords": [
     "nx",
-    "wxt",
-    "mdx",
     "nix",
-    "react",
+    "vite",
+    "biome",
+    "vitest",
     "pulumi",
+    "nestjs",
     "likec4",
-    "fumadocs",
+    "devenv",
+    "openapi",
+    "compodoc",
     "monorepo",
-    "storybook",
-    "playwright",
-    "payloadcms",
-    "drizzle-orm",
-    "serenity-js",
-    "tailwindcss",
+    "fumadocs",
     "trunk-based-development"
-  ],
-  "devDependencies": {
-    "nx": "21.5.3",
-    "@nx/js": "21.5.3",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "tslib": "^2.3.0",
-    "typescript": "~5.9.2"
-  }
+  ]
 }
