--- a/.envrc
+++ b/.envrc
@@ -3,3 +3,5 @@ export DIRENV_WARN_TIMEOUT=20s
 eval "$(devenv direnvrc)"
 
 use devenv
+
+eval "$(esc open apidae-systems/platform/dev --format 'shell')"
