--- a/docs/project.json
+++ b/docs/project.json
@@ -21,5 +21,5 @@
       }
     }
   },
-  "$schema": "../../node_modules/nx/schemas/project-schema.json"
+  "$schema": "../node_modules/nx/schemas/project-schema.json"
 }
