build: overhaul workspace
Signed-off-by: Mumtahin Farabi <mfarabi619@gmail.com>

--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,4 @@
 export DIRENV_WARN_TIMEOUT=20s
-
 eval "$(devenv direnvrc)"
-
 use devenv
-
-eval "$(esc open apidae-systems/platform/dev --format 'shell')"
+eval "$(esc env open apidae-systems/platform/dev@latest --format shell)"
