--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "engines": {
     "node": "24.8.0"
   },
+  "dependencies": {
+    "likec4": "^1.41.0"
+  },
   "license": "GPL-3.0-only",
   "homepage": "https://github.com/apidae-systems/platform",
   "bugs": {
@@ -17,90 +20,13 @@
     "url": "git+https://github.com/apidae-systems/platform.git"
   },
   "author": "Mumtahin Farabi <mfarabi619@gmail.com> (https://github.com/MFarabi619)",
-  "dependencies": {
-    "@apollo/server": "catalog:",
-    "@biomejs/biome": "catalog:",
-    "@compodoc/compodoc": "catalog:",
-    "@mkvlrn/result": "catalog:",
-    "@nestjs/apollo": "catalog:",
-    "@nestjs/cli": "catalog:",
-    "@nestjs/common": "catalog:",
-    "@nestjs/config": "catalog:",
-    "@nestjs/core": "catalog:",
-    "@nestjs/graphql": "catalog:",
-    "@nestjs/platform-express": "catalog:",
-    "@nestjs/platform-socket.io": "catalog:",
-    "@nestjs/swagger": "catalog:",
-    "@nestjs/websockets": "catalog:",
-    "@scalar/nestjs-api-reference": "catalog:",
-    "class-transformer": "catalog:",
-    "class-validator": "catalog:",
-    "graphql": "catalog:",
-    "graphql-request": "catalog:",
-    "gray-matter": "catalog:",
-    "pino-pretty": "catalog:",
-    "reflect-metadata": "catalog:",
-    "rxjs": "catalog:",
-    "superjson": "catalog:",
-    "xstate": "catalog:",
-    "zod": "catalog:"
-  },
-  "devDependencies": {
-    "@mkvlrn/config": "catalog:",
-    "@nestjs/schematics": "catalog:",
-    "@nestjs/serve-static": "catalog:",
-    "@nestjs/testing": "catalog:",
-    "@nx/js": "catalog:",
-    "@nx/nest": "catalog:",
-    "@nx/node": "catalog:",
-    "@nx/vite": "catalog:",
-    "@nx/web": "catalog:",
-    "@nx/workspace": "catalog:",
-    "@statelyai/inspect": "catalog:",
-    "@swc-node/register": "catalog:",
-    "@swc/cli": "catalog:",
-    "@swc/core": "catalog:",
-    "@swc/helpers": "catalog:",
-    "@types/express": "catalog:",
-    "@types/node": "catalog:",
-    "@types/supertest": "catalog:",
-    "@vitest/coverage-v8": "catalog:",
-    "@vitest/ui": "catalog:",
-    "get-port": "catalog:",
-    "graphql-voyager": "catalog:",
-    "likec4": "catalog:",
-    "node-modules-inspector": "catalog:",
-    "nx": "catalog:",
-    "supertest": "catalog:",
-    "swc-loader": "catalog:",
-    "ts-loader": "catalog:",
-    "ts-node": "catalog:",
-    "tsc-alias": "catalog:",
-    "tsconfig-paths": "catalog:",
-    "tslib": "catalog:",
-    "tsup": "catalog:",
-    "tsx": "catalog:",
-    "typescript": "catalog:",
-    "vite": "catalog:",
-    "vite-node": "catalog:",
-    "vite-tsconfig-paths": "catalog:",
-    "vitest": "catalog:",
-    "vue-tsc": "catalog:"
-  },
   "keywords": [
-    "nx",
     "nix",
-    "vite",
-    "biome",
-    "vitest",
     "pulumi",
-    "nestjs",
     "likec4",
     "devenv",
     "openapi",
-    "compodoc",
     "monorepo",
-    "fumadocs",
     "trunk-based-development"
   ]
 }
