--- a/devenv.yaml
+++ b/devenv.yaml
@@ -1,7 +1,18 @@
-# yaml-language-server: $schema=https://devenv.sh/devenv.schema.json
-imports:
-  - ./apps/microvisor
-allowUnfree: true
 inputs:
+  esp32s3-idf:
+    url: github:mirrexagon/nixpkgs-esp-dev
+    inputs:
+      nixpkgs:
+        follows: nixpkgs-unstable
   nixpkgs:
     url: github:cachix/devenv-nixpkgs/rolling
+  nixpkgs-unstable:
+    url: github:nixos/nixpkgs/nixpkgs-unstable
+  rust-overlay:
+    url: github:oxalica/rust-overlay
+    inputs:
+      nixpkgs:
+        follows: nixpkgs
+allowUnfree: true
+imports:
+- ./apps/microvisor
